examples/good/13-13-type-checking-not-printable-type.hp
def odd :: Int -> Bool x = x % 2 == 1;

odd;
