examples/bad/non-applicable-trivial-brackets.hp
def f :: Int -> Int x = x + 1;

(f) 1;
